[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/Game/GameOver/WordsWritten.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/Components/StatsGrid.gd" type="Script" id=3]
[ext_resource path="res://src/UI/Game/GameOver/GameOverDialog.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="GameOverDialog" type="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
input_pass_on_modal_close_click = false
exclusive = true
script = ExtResource( 4 )

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0

[node name="TabContainer" type="TabContainer" parent="VBox"]
offset_right = 968.0
offset_bottom = 486.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/panel = SubResource( 2 )

[node name="Stats" type="Control" parent="VBox/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="VBox/TabContainer/Stats"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 21.0

[node name="Label" type="Label" parent="VBox/TabContainer/Stats/VBox"]
offset_right = 968.0
offset_bottom = 33.0
text = "Game Over!"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBox/TabContainer/Stats/VBox"]
offset_top = 37.0
offset_right = 968.0
offset_bottom = 422.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="VBox/TabContainer/Stats/VBox/ScrollContainer"]
offset_right = 968.0
offset_bottom = 385.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatsGrid" type="GridContainer" parent="VBox/TabContainer/Stats/VBox/ScrollContainer/VBox"]
offset_right = 968.0
offset_bottom = 385.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 7
theme_override_constants/h_separation = 60
columns = 2
script = ExtResource( 3 )

[node name="Words" parent="VBox/TabContainer" instance=ExtResource( 2 )]
visible = false

[node name="HBox" type="HBoxContainer" parent="VBox"]
offset_top = 490.0
offset_right = 968.0
offset_bottom = 544.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.22
theme_override_constants/separation = 55
alignment = 1

[node name="PlayAgain" type="Button" parent="VBox/HBox"]
offset_left = 296.0
offset_right = 454.0
offset_bottom = 54.0
text = "Play Again"

[node name="MainMenu" type="Button" parent="VBox/HBox"]
offset_left = 509.0
offset_right = 672.0
offset_bottom = 54.0
text = "Main Menu"

[connection signal="pressed" from="VBox/HBox/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="VBox/HBox/MainMenu" to="." method="_on_MainMenu_pressed"]
